The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2004-05-04 DP        Prevent duplication of functional indexes
    <li>2004-03-30 AP   ***  no initial language selection (using system default)
    <li>2004-03-25 AP   ***  Allow initial selection of language "Default"
    <li>2004-03-24 AP        changed font handling to accept exotic weights
    <li>2004-03-17 AP        Updated sources for wx 2.5.1
    <li>2004-03-17 AP        Added Font Option
    <li>2004-03-06 AP   ***  Fixed missing qtIdent for CREATE DATABASE TEMPLATE option
    <li>2004-02-23 DP        Correct syntax for constraint comments generated SQL
    <li>2004-01-30 DP        Include column comments in generated table SQL
    <li>2004-01-13 AP   ***  Fix crash refreshing dropped object
    <li>2003-12-28 AP        gtk: fix for dlgForeignKey combobox illegal selection 
    <li>2003-12-28 AP        Fix for pgDatabase::database crash
    <li>2003-12-10 AP        serial/bigserial datatype for ALTER TABLE; can create new sequence/dependency
    <li>2003-12-09 AP   ***  Fix for Tagalog language
    <li>2003-12-08 AP        Refactor virtual pgObject::GetDatabase()
    <li>2003-12-08 AP        Rewrite of schema qualifier suppression: configurable or search_path
    <li>2003-12-08 DP        Prompt to save changes before opening SQL files.
    <li>2003-12-08 AP        Query tool: display of inserted OIDs
    <li>2003-12-08 AP        pgAgent schema, changed system schema discovery
    <li>2003-12-05 AP   ***  allow all 'p' types except any,trigger,language_handler as return types for functions
    <li>2003-12-03 AP   ***  fix connect to MULE_INTERNAL db