@@ -91,6 +91,7 @@ frmQuery::frmQuery(frmMain *form, const wxString& _title, pgConn *_conn, const w
     mainForm=form;
     title = _title;
     conn=_conn;
+	loaded = false;
 
     SetIcon(wxIcon(sql_xpm));
     wxWindowBase::SetFont(settings->GetSystemFont());
@@ -219,9 +220,8 @@ frmQuery::frmQuery(frmMain *form, const wxString& _title, pgConn *_conn, const w
     horizontal->SplitHorizontally(sqlQuery, output, splitpos);
 
     sqlQuery->SetText(query);
-    changed = !query.IsNull() && settings->GetStickySql();
-    if (changed)
-        setExtendedTitle();
+	changed = false;
+
     updateMenu();
     queryMenu->Enable(MNU_SAVEHISTORY, false);
     queryMenu->Enable(MNU_CLEARHISTORY, false);
@@ -333,6 +333,7 @@ void frmQuery::Go()
 {
     Show(TRUE);
     sqlQuery->SetFocus();
+	loaded = true;
 }
 
 
@@ -545,6 +546,7 @@ void frmQuery::OnRedo(wxCommandEvent& ev)
 void frmQuery::setExtendedTitle()
 {
     wxString chgStr;
+
     if (changed)
         chgStr = wxT(" *");
 
@@ -621,6 +623,9 @@ void frmQuery::OnClose(wxCloseEvent& event)
 
 void frmQuery::OnChangeStc(wxStyledTextEvent& event)
 {
+	if (!loaded)
+		return;
+
     if (!changed)
     {
         changed=true;
