@@ -16,6 +16,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2004-05-10 DP        Generate function SQL correctly when the return type needs a schema specification
     <li>2004-05-04 DP        Prevent duplication of functional indexes
     <li>2004-03-30 AP   ***  no initial language selection (using system default)
     <li>2004-03-25 AP   ***  Allow initial selection of language "Default"
